# dexteri

./: .gitignore  Cargo.toml  LICENSE  README.md  ab_crave_vs_oss_depth2.json  tauri.conf.json
.github/workflows/: release.yml
assets/: index.html
packaging/appimage/: AppRun  Dexteri.appdata.xml  build_appimage.sh  dexteri.desktop
scripts/: install-tauri-deps.sh
src/: crawler.rs  gui.rs  indexer.rs  lib.rs  main.rs  models.rs  ports.rs  report.rs  security.rs  util.rs  vuln.rs  web.rs
